--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,4 +1,4 @@
-.Main-header {
+/* .Main-header {
     background-color: #282c34;
     min-height: 100vh;
     display: flex;
@@ -12,7 +12,164 @@
 .Main-title {
     box-shadow: -1px 0px 5px -1px rgba(0,0,0,0.75);
   
+} */
+a {
+    text-decoration: none;
+    color: #333;
+}
+.Main {
+  position: absolute;
+  width: 1920px;
+  height: 1080px;
+  background: #ffffff;
+}
+.Main-logo {
+  position: absolute;
+  top: -100px;
+  left: 35%;
+  width: 552px;
+  height: 552px;
+  background: url("./Goku.png");
+}
+.Main-row {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+.Main-top-left {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  font-weight: 700;
+  cursor: pointer;
+  top: 30px;
+  left: 0;
+  width: 295px;
+  height: 65px;
+
+  background: #b200b7;
+}
+
+.Main-top-right {
+  position: absolute;
+  top: 30px;
+  right: 0;
+  width: 209px;
+  height: 65px;
+  background: #ffcc00;
+}
+.Main-bottom-left {
+  position: absolute;
+  bottom: 30px;
+  left: 0;
+  width: 143px;
+  height: 65px;
+  background: #f38100;
+}
+.Main-bottom-right {
+  position: absolute;
+  bottom: 30px;
+  right: 0;
+  width: 143px;
+  height: 65px;
+  background: #770578;
+}
+.Main-game-one {
+    position: absolute;
+    left: 15%;
+    top: 30%;
+    width: 651px;
+    height: 306px;
+    background: url("./one.png");
+    border-radius: 50px;
+    /* transform: matrix(-1, 0, 0, 1, 0, 0); */
   }
 
+.Main-game-two {
+  position: absolute;
+  right: 15%;
+  top: 30%;
+  width: 651px;
+  height: 306px;
+  background: url("./two.png");
+  border-radius: 50px;
+  /* transform: matrix(-1, 0, 0, 1, 0, 0); */
+}
 
-  
+.Main-game-three {
+    position: absolute;
+    left: 15%;
+    bottom: 10%;
+    width: 651px;
+    height: 306px;
+    background: url("./three.png");
+    border-radius: 50px;
+    /* transform: matrix(-1, 0, 0, 1, 0, 0); */
+  }
+  .Main-game-four {
+    position: absolute;
+    right: 15%;
+    bottom: 10%;
+    width: 651px;
+    height: 306px;
+    background: url("./four.png");
+    border-radius: 50px;
+    /* transform: matrix(-1, 0, 0, 1, 0, 0); */
+  }
+.Main-game-button {
+  position: absolute;
+  left: 200px;
+  top: 65%;
+  width: 205px;
+  height: 68px;
+  background: #ffcc00;
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
+  border-radius: 50px;
+  z-index: 33;
+  outline: none;
+}
+.Main-game-one-label {
+  position: absolute;
+  top: 20%;
+  left: 150px;
+  width: 315px;
+  height: 75px;
+  background: url("./Malware.png");
+}
+.Main-game-two-label {
+  position: absolute;
+  top: 20%;
+  left: 150px;
+  width: 315px;
+  height: 75px;
+  background: url("./Phishing.png");
+}
+
+.Main-game-three-label {
+  position: absolute;
+  top: 50px;
+  left: 150px;
+  width: 549px;
+  height: 50px;
+
+  border-radius: 50px;
+
+  background: url("./Cyberbullying.png");
+}
+.Main-game-four-label {
+  position: absolute;
+  bottom: 50px;
+  right: 150px;
+  width: 651px;
+  height: 305px;
+  border-radius: 50px;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+  /* background: url("./DataPrivacy.png"); */
+}
+
