--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -153,23 +153,19 @@ a {
 
 .Main-game-three-label {
   position: absolute;
-  top: 50px;
+  bottom: 60%;
   left: 150px;
-  width: 549px;
-  height: 50px;
-
-  border-radius: 50px;
-
+  width: 445px;
+  height: 95px;
   background: url("./Cyberbullying.png");
 }
 .Main-game-four-label {
   position: absolute;
-  bottom: 50px;
-  right: 150px;
-  width: 651px;
-  height: 305px;
-  border-radius: 50px;
-  transform: matrix(-1, 0, 0, 1, 0, 0);
-  /* background: url("./DataPrivacy.png"); */
+  bottom: 60%;
+  left: 90px;
+  width: 475px;
+  height: 75px;
+/*   transform: matrix(-1, 0, 0, 1, 0, 0); */
+  background: url("./DataPrivacy.png");
 }
 
